RESOLVED FIXED 246352
[GStreamer] Fix prolonged buffering during progressive live playback
https://bugs.webkit.org/show_bug.cgi?id=246352
Summary [GStreamer] Fix prolonged buffering during progressive live playback
Enrique Ocaña
Reported 2022-10-11 11:11:14 PDT
On one of the Comcast devices prolonged buffering is observed in some apps where live assets are using progressive player. The high threshold of the queue element (used in live videos or in scenarios where disk buffering is disabled) can be lowered to mitigate the problem, so that buffering can finish much faster. See: https://github.com/WebPlatformForEmbedded/WPEWebKit/pull/953
Attachments
Enrique Ocaña
Comment 1 2022-10-11 11:29:09 PDT
EWS
Comment 2 2022-10-17 07:46:13 PDT
Committed 255627@main (7fd5af510133): <https://commits.webkit.org/255627@main> Reviewed commits have been landed. Closing PR #5236 and removing active labels.
Radar WebKit Bug Importer
Comment 3 2022-10-17 07:47:19 PDT
Note You need to log in before you can comment on or make changes to this bug.